--- a/Cours JS 2-6/cours/style.css
+++ b/Cours JS 2-6/cours/style.css
@@ -8,6 +8,7 @@ body {
   margin: 0;
   color: white;
   min-height: 200vh;
+  overflow-x: hidden;
 }
 .box {
   border: 6px solid white;
@@ -33,3 +34,16 @@ p {
   opacity: 1;
   transform: translateX(0);
 }
+.mousemove {
+  height: 50px;
+  width: 50px;
+  border: 2px solid pink;
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  border-radius: 50px;
+  transform: translate(-50%, -50%);
+  transition: 0.2s ease;
+  z-index: -1;
+}
+
